--- a/lab 1/index.html
+++ b/lab 1/index.html
@@ -22,12 +22,34 @@
 		<div class="news-title">Новости</div>
 		<div class="news">Статьи</div>
 	</div>
-	<footer>
+	<footer class="footer">
 		<div class="footer__main">
-			<div class="footer__menu">Menu</div>
+			<ul class="footer__menu">
+				<li class="footer_menu__item">
+					Главная
+				<li class="footer_menu__item">
+					Продукты
+				</li>
+				<li class="footer_menu__item">
+					Скачать
+				</li>
+				<li class="footer_menu__item">
+					Техническая поддержка
+				</li>
+				<li class="footer_menu__item">
+					Обучение</a>
+				</li>
+				<li class="footer_menu__item">
+					О нас</a>
+				</li>
+			</ul>
 			<div class="footer__logo">Logo</div>
 			<div class="footer__copyringt">www.stadiumfacts.tech</div>
 		</div>
-		<div class="footer__subfooter">Проект компании N. Все права защищены.</div>
+		<div class="footer__subfooter">
+			<span class="footer__subfooter__inner">
+				Проект компании N. Все права защищены.
+			</span>
+		</div>
 	</footer>
 </html>
