Add news content, fix css

--- a/lab 1/index.html
+++ b/lab 1/index.html
@@ -20,7 +20,20 @@
 			</div>
 		</div>
 		<div class="news-title">Новости</div>
-		<div class="news">Статьи</div>
+		<div class="news">
+			<div class="news-item">
+				<img src="http://placekitten.com/g/619/489" class="news-img">
+				<div class="news-item-title">Котик 1</div>
+			</div>
+			<div class="news-item">
+				<img src="http://placekitten.com/g/619/489" class="news-img">
+				<div class="news-item-title">Котик 2</div>
+			</div>
+			<div class="news-item">
+				<img src="http://placekitten.com/g/619/489" class="news-img">
+				<div class="news-item-title">Котик 3</div>
+			</div>
+		</div>
 	</div>
 	<footer class="footer">
 		<div class="footer__main">
