--- a/lab 2/index.html
+++ b/lab 2/index.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <div>
-            <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light header">
-                    <h1 class="text-light"><span class="text-success">Stadium</span>Facts</h1>
-                    <p class="text-light">Open Source Enterprise Data Platform</p>
-                    <a href="#aboutus" data-click="scroll-to-target" class="btn btn-light btn-outline-secondary">Learn more</a>
-                    <a href="#contactus" data-click="scroll-to-target" class="btn btn-light btn-outline-secondary">Contact Us</a>
+        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light header">
+            <div class="p-3 p-md-5">
+                <h1 class="text-light" style="font-family: ProximaNova, Arial, sans-serif;"><span class="text-success">Stadium</span>Facts</h1>
+                <p class="text-light">Open Source Enterprise Data Platform</p>
+                <a href="#aboutus" data-click="scroll-to-target" class="btn btn-light btn-outline-secondary">Learn more</a>
+                <a href="#contactus" data-click="scroll-to-target" class="btn btn-light btn-outline-secondary">Contact Us</a>
             </div>
+        </div>
     </div>
 
-    <div class="text-center p-3 p-md-5 m-md-3">
-                <p>
-                    We are a keen team of professionals working and integrating complex information systems for over 20 years.
-                </p>
-                <p>
-                    In 2555 StadiumFacts has been accepted by the coolest Big Data open source platform KRUP (Kittens Rainbows Unicorns Puppies):
-                </p>
+    <div class="text-center p-5 p-md-5 m-md-3">
+            <p style="font-size: 23px">
+                We are a keen team of professionals working and integrating complex information systems for over 20 years.
+            </p>
+             <hr>
+            <p style="font-size: 23px">
+                In 2555 StadiumFacts has been accepted by the coolest Big Data open source platform KRUP (Kittens Rainbows Unicorns Puppies):
+            </p>
     </div>
 
     <div class="news">
@@ -73,34 +76,33 @@
                 </div>
             </div>
         </div>
-
     </div>
 
-    <div class="text-center p-3 p-md-5 m-md-3" id="aboutus">
-            <div class="row">
-                <div class="position-relative overflow-hidden col-lg-12 p-md-5">
-                    <h2 class="tm-welcome-text">Products</h2>
-                <p>
-                    <a href="" class="text-success">SCM</a> - simplifies deploying and management of data services on premise, in private or public clouds. By splitting data landscape on two independent management layers – infrastructure layer and application layer – your platform becomes flexible, predictable and repeatable. 
-                    
-                </p>
-                <p>
-                    <a href="" class="text-success">SDH</a> - product aimed at handling semi-structured and unstructured data. This is a full distribution platform based on Echapa Poodah, adapted for corporate use.
-                </p>
-                <p>
-                    <a href="" class="text-success">SDB</a> - distributed database based on using MPP (massively parallel processing) principle. It takes its origin from Redapple database.
-                </p>
-                <p>
-                    <a href="" class="text-success">SDG</a> - in-memory computing platform, provides the ability to flexibly scale the resulting solution into dozens and hundreds of compute nodes. 
-                </p>
-                <p>
-                    <a href="" class="text-success">SDS</a> - an efficient, scalable, fault-tolerant solution for streaming data processing in real-time, adapted for corporate use and built on the basis of Echapa Sartre and Echapa Mimimi – open source projects.
-                </p>
-                </div>
+    <div class="text-center p-5 p-md-3 m-md-3" id="aboutus">
+        <div class="row">
+            <div class="position-relative overflow-hidden col-lg-12 p-md-5">
+                <h2 class="tm-welcome-text">Products</h2>
+            <p>
+                <a href="" class="text-success">SCM</a> - simplifies deploying and management of data services on premise, in private or public clouds. By splitting data landscape on two independent management layers – infrastructure layer and application layer – your platform becomes flexible, predictable and repeatable. 
+                
+            </p>
+            <p>
+                <a href="" class="text-success">SDH</a> - product aimed at handling semi-structured and unstructured data. This is a full distribution platform based on Echapa Poodah, adapted for corporate use.
+            </p>
+            <p>
+                <a href="" class="text-success">SDB</a> - distributed database based on using MPP (massively parallel processing) principle. It takes its origin from Redapple database.
+            </p>
+            <p>
+                <a href="" class="text-success">SDG</a> - in-memory computing platform, provides the ability to flexibly scale the resulting solution into dozens and hundreds of compute nodes. 
+            </p>
+            <p>
+                <a href="" class="text-success">SDS</a> - an efficient, scalable, fault-tolerant solution for streaming data processing in real-time, adapted for corporate use and built on the basis of Echapa Sartre and Echapa Mimimi – open source projects.
+            </p>
             </div>
+        </div>
     </div>
-
-    <div class="col-lg-6 p-md-5">
+    <hr>
+    <div class="col-lg-6 p-5 p-md-3 m-md-3">
         <h3 class="mb-4 tm-text-gray">Contact Us</h3>
         <form action="#contactus" method="post" class="tm-contact-form" id="contactus">
             <div class="row">
